tests/neg-custom-args/captures/reaches.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:22:11 --------------------------------------
22 |    cur = (() => f.write()) :: Nil // error since {f*} !<: {xs*}
   |           ^^^^^^^^^^^^^^^^^^^^^^^
   |           Found:    List[box () ->{f} Unit]
   |           Required: List[box () ->{xs*} Unit]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:33:7 ---------------------------------------
33 |      (() => f.write()) :: Nil // error since {f*} !<: {xs*}
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |       Found:    List[box () ->{f} Unit]
   |       Required: box List[box () ->{xs*} Unit]^?
   |
   |       Note that reference (f : File^), defined in method $anonfun
   |       cannot be included in outer capture set {xs*} of value cur which is associated with method runAll1
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:36:6 ------------------------------------------------------------
36 |  var cur: List[Proc] = xs // error: Illegal type for var
   |      ^
   |      Mutable variable cur cannot have type List[box () => Unit] since
   |      the part box () => Unit of that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/reaches.scala:43:15 -----------------------------------------------------------
43 |  val cur = Ref[List[Proc]](xs) // error: illegal type for type argument to Ref
   |            ^^^^^^^^^^^^^^^
   |            Sealed type variable T cannot be instantiated to List[box () => Unit] since
   |            the part box () => Unit of that type captures the root capability `cap`.
   |            This is often caused by a local capability in an argument of constructor Ref
   |            leaking as part of its result.
-- Error: tests/neg-custom-args/captures/reaches.scala:53:31 -----------------------------------------------------------
53 |  val id: Id[Proc, Proc] = new Id[Proc, () -> Unit] // error
   |                               ^^^^^^^^^^^^^^^^^^^^
   |                               Sealed type variable A cannot be instantiated to box () => Unit since
   |                               that type captures the root capability `cap`.
   |                               This is often caused by a local capability in an argument of constructor Id
   |                               leaking as part of its result.
